# audio-orchestrator

./: .bandit  .checkmake.yaml  .coveragerc  .cursorignore  .dockerignore  .editorconfig  .env.common  .env.docker  .env.local.sample  .env.sample  .env.sample.backup  .gitignore  .hadolint.yaml  .markdownlint.json  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint  AGENTS.md  AUDIO_PIPELINE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LINTER_AUDIT_SUMMARY.md  Makefile  README.md  Taskfile.yml  audio-orchestrator.code-workspace  checkmake.ini  constraints.txt  convert_audio.py  discord-voice-lab.code-workspace  docker-compose.ci.yml  docker-compose.observability-test.yml  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  junit.xml  pyproject.toml  pytest.ini  (+3 more)
.cursor/: cli-config.json  cli.json  settings.json
.cursor/plans/: 01-opentelemetry-observability-stack-713884fa.plan.md  04-opentelemetry-observability-stack-final-5026a19c.plan.md  advanced-ai-integration-big-bang.plan.md  audio-orchestrator-additional-context-2.md  audio-orchestrator-additional-context-3.md  audio-orchestrator-additional-context-4.md  audio-orchestrator-additional-context-5.md  audio-orchestrator-additional-context.md  ci-workflow-restructuring-50cbc52e.plan.md  consolidate-virtual-environments-3d4a700f.plan.md  current-system-audit.md  enhanced-job-reporting-74a6b81c.plan.md  makefile-1e041b1c.plan.md  scaffold-audio-orchestrator-project.md  service-consolidation-alignment-3c88c31f.plan.md  source-of-truth.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  instructions
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-analyze-ci-failures.yaml  auto-fix-ci.yaml  auto-fix-lint.yaml  base-images.yaml  ci.yaml  codeql.yml  core-ci.yaml  cursor-fix-ci-minimal.yaml  cursor-fix-ci.yaml  docker-ci.yaml  docs-ci.yaml  main-ci.yaml  monitor-auto-analyze-ci-failures.yaml  security-ci.yaml
agents/: __init__.py  echo_agent.py
audio_pipeline/: __init__.py  types.py
bot/: __init__.py  bootstrap.py  main.py
cmd/bot/: Dockerfile  main.go  opustest_test.go
config/: __init__.py  otel-collector-config.yaml  prometheus.yml  settings.py
config/grafana/: entrypoint.sh  grafana.ini
docs/: AGENTS.md  AGENT_GUIDELINES.md  AI_AGENT_VISION.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CONFIGURATION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  ENVIRONMENT_CONFIGURATION.md  EXTENDING_THE_AGENT.md  INTEGRATION_SPEC.md  LOGGING.md  LOGGING_IMPROVEMENTS.md  MCP_MANIFEST.md  MCP_SERVER_INTEGRATION_OPTIONS.md  ONBOARDING.md  README.md  ROADMAP.md  TTS.md  VOICE_AGENT_COMMANDS.md  grafana-dashboard.json  index.md  log-analysis-model-loading-improvements.md  migration-candidates.md  mobile-integration-config-samples.md  mobile-integration-guide.md  mobile-integration-spec.md  testing.md
docs/.templates/: proposal.md
docs/api/: agent_types.md  audio_adapter_types.md  rest-api.md
docs/architecture/: agent_system.md  audio-enhancement-pipeline.md  audio_pipeline.md  base-images.md  model-paths.md  shared-utilities.md  system-overview.md
docs/getting-started/: README.md  environment.md  local-development.md  runtime.md  taskfile-migration.md  troubleshooting.md
docs/guides/: adding_adapter.md  adding_agent.md  docker-builds.md  protocol_design.md  testing_agents.md  testing_audio_adapters.md
docs/implemented/: github-actions-migration.md  tts_service_evaluation.md
docs/operations/: README.md  build-and-ci-architecture.md  build-optimization.md  ci-workflows.md  cursor-ci-integration.md  health-check-standards.md  observability.md  performance.md  security.md
docs/proposals/: 02-streamline-stt-model-loader.md  03-use-in-memory-wav-buffer-for-stt.md  04-standardize-audio-frame-segment-processing.md  05-consolidate-audio-enhancement-endpoints.md  06-cache-audio-request-body.md  07-standardize-service-metric-registration.md  08-shared-resilient-health-client-factory.md  09-tighten-startup-error-propagation.md  10-encapsulate-service-state.md  11-refine-bark-startup-pipeline.md  12-avoid-disk-io-in-testing-ui.md  13-remove-unused-testing-models.md  14-remove-stt-test-change-comment.md  15-deprecate-audio-service-extract-to-common-libraries-36b8e9cc.plan.md  2025-11-03-avoid-disk-io-in-testing-ui.md  2025-11-03-cache-audio-request-body.md  2025-11-03-consolidate-audio-enhancement-endpoints.md  2025-11-03-encapsulate-service-state.md  2025-11-03-modularize-stt-transcription-flow.md  2025-11-03-refine-bark-startup-pipeline.md  2025-11-03-remove-stt-test-change-comment.md  2025-11-03-remove-unused-testing-models.md  README.md  index.md  (+20 more)
io_adapters/: __init__.py  adapter_registry.py  audio_input_adapter.py  audio_output_adapter.py
llm/: Dockerfile  README.md  app.py  client.go  client_test.go  entrypoint.sh  requirements.txt
mcp/: Dockerfile  app.py
mcp-server/: main.go  ws_transport.go
mobile-app/: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  README.md  babel.config.js  eslint.config.js  metro.config.js  package.json  tsconfig.json
models/: .gitignore
orchestrator/: __init__.py  base_agent.py
scripts/: analyze_audio_quality.py  analyze_logs.py  benchmark_enhancement_latency.py  build-base-images.sh  build-incremental.sh  build-wheels.sh  check-syntax.sh  ci_diagnostics.py  ci_env_config.py  clean-caches.sh  create_voice_pipeline_test_dataset.py  detect-changed-services.sh  docker-compose-detect.sh  docker-ghcr-auth.sh  download-models.sh  download_flan_t5.py  eval_stt.py  fix-model-permissions.sh  health_check.py  measure_baseline_voice_pipeline.py  migrate_service_names.py  prepare_env_files.py  push-base-images.sh  rotate_auth_tokens.py  run-compose.sh  run_bot.sh  run_stt.sh  setup-venv.sh  test_metricgan.py  test_stt.sh  validate-changes.sh  validate_audio_pipeline.sh  verify_last_updated.py
services/: __init__.py  go.sum  requirements-base.txt  requirements-dev.txt  requirements-test.txt
stt/: Dockerfile  app.py  requirements.txt
tests/: __init__.py
(+637 files in other folders)
