[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-orchestrator"
version = "2.0.0"
description = "Audio-First AI Orchestrator Platform with pluggable I/O adapters"
authors = [
    {name = "Audio Orchestrator Team", email = "team@audio-orchestrator.dev"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "sqlalchemy[aio]>=2.0.0",
    "ffmpeg-python>=0.2.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "discord.py>=2.3.0",
    "asyncio-mqtt>=0.13.0",
    "aiofiles>=23.0.0",
    "httpx>=0.24.0",
    "prometheus-client>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "types-soundfile>=0.12.0",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/audio-orchestrator/platform"
Repository = "https://github.com/audio-orchestrator/platform"
Documentation = "https://audio-orchestrator.dev/docs"
Issues = "https://github.com/audio-orchestrator/platform/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*", "config*", "io_adapters*", "audio_pipeline*", "orchestrator*", "agents*", "services*", "persistence*", "monitoring*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "discord.*",
    "soundfile.*",
    "ffmpeg.*",
    "numpy.*",
]
ignore_missing_imports = true